tests/baselines/reference/emptyVariableDeclarationBindingPatterns02_ES5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
emptyVariableDeclarationBindingPatterns02_ES5.ts(2,9): error TS1182: A destructuring declaration must have an initializer.
emptyVariableDeclarationBindingPatterns02_ES5.ts(3,9): error TS1182: A destructuring declaration must have an initializer.
emptyVariableDeclarationBindingPatterns02_ES5.ts(4,11): error TS1182: A destructuring declaration must have an initializer.
emptyVariableDeclarationBindingPatterns02_ES5.ts(6,9): error TS1182: A destructuring declaration must have an initializer.
emptyVariableDeclarationBindingPatterns02_ES5.ts(7,9): error TS1182: A destructuring declaration must have an initializer.
emptyVariableDeclarationBindingPatterns02_ES5.ts(8,11): error TS1182: A destructuring declaration must have an initializer.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== emptyVariableDeclarationBindingPatterns02_ES5.ts (6 errors) ====
    (function () {
        var {};
            ~~
!!! error TS1182: A destructuring declaration must have an initializer.
        let {};
            ~~
!!! error TS1182: A destructuring declaration must have an initializer.
        const {};
              ~~
!!! error TS1182: A destructuring declaration must have an initializer.
    
        var [];
            ~~
!!! error TS1182: A destructuring declaration must have an initializer.
        let [];
            ~~
!!! error TS1182: A destructuring declaration must have an initializer.
        const [];
              ~~
!!! error TS1182: A destructuring declaration must have an initializer.
    })();